--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -46,6 +46,17 @@ ul.menu-nav, div.menu-branding{
         height: 150px;
     }
 }
+
+
+.about-info{
+    grid-template-areas: 
+    'bioimage'
+    'bio'
+    'job1'
+    'job2'
+    'job3';
+    grid-template-columns:  1fr;
+}
 }
 
 // Smartphones
