--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,11 +1,15 @@
 // Widescreens
 @include mediaXl{
-
+.projects{
+    grid-template-columns: repeat(4, 1fr);
+}
 }
 
 // Desktop & Laptops
 @include mediaLg{
-
+    .projects{
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 //Tablets & Small Laptops
@@ -57,6 +61,11 @@ ul.menu-nav, div.menu-branding{
     'job3';
     grid-template-columns:  1fr;
 }
+
+
+.projects{
+    grid-template-columns: repeat(2, 1fr);
+}
 }
 
 // Smartphones
@@ -64,4 +73,8 @@ ul.menu-nav, div.menu-branding{
  main#home h1 {
      margin-top: 10vh;
  }
+
+ .projects{
+    grid-template-columns: 1fr;
+}
 }
