--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,9 @@ body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 line-height: 1.5;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+font-family: Georgia,serif;
 }
 
 // Headings
@@ -70,7 +73,7 @@ main{
     &#home{
         overflow: hidden;
         h1{
-            margin-top: 20vh;
+            margin-top: 28vh;
         }
     }
 }
@@ -126,12 +129,23 @@ main{
 
     img{
         width: 100%;
-        border: 3px #fff solid;
+        height: 230px;
+        border: 5px #fff solid;
         &:hover{
             opacity: .5;
             border-color: $secondary-color;
             @include easeOut;
         }
+    }
+
+    h4{
+        font-size: 1.5rem;
+        color: $secondary-color;
+        margin: 0 auto;
+        
+    }
+    span p{
+        margin-top: 0;
     }
 }
 
@@ -176,17 +190,7 @@ main{
 }
 
 
-.btn-dark{
-@extend .btn;
-background: darken($primary-color,50);
-color: #fff;
-}
 
-.btn-light{
-@extend .btn;
-background: lighten ($primary-color, 50);
-color: #333;
-}
 
 #main-footer{
     text-align: center;
