--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -93,7 +93,7 @@ overflow: hidden;
         .portrait {
             width: 250px;
             height: 250px;
-            background: url(../img/portrait.jpg);
+            background: url(../ttlbio.jpg);
             border-radius: 50%;
             border: solid 3px $secondary-color;
         }
