--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -17,11 +17,14 @@
 main{
     align-items: center;
     text-align: center;
+    padding: 3rem 1rem;
     
     .lg-heading{
         line-height: 1;
         margin-bottom: 1rem;
     }
+  
+
 }
 
 ul.menu-nav, div.menu-branding{
@@ -70,11 +73,14 @@ ul.menu-nav, div.menu-branding{
 
 // Smartphones
 @include mediaSm{
+
+
  main#home h1 {
      margin-top: 10vh;
  }
 
  .projects{
     grid-template-columns: 1fr;
+
 }
 }
