--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -69,15 +69,15 @@ ul.menu-nav, div.menu-branding{
 .projects{
     grid-template-columns: repeat(2, 1fr);
 }
+
+
+h1.lg-heading, h2.lg-heading, h3.lg-heading{
+    font-size: 3rem;
+}
 }
 
 // Smartphones
 @include mediaSm{
-
-
- main#home h1 {
-     margin-top: 10vh;
- }
 
  .projects{
     grid-template-columns: 1fr;
